<resources>
    <!-- App-Name -->
    <string name="app_name">E c h o</string>
    <string name="Slogan">Demokratie digital. Meinung zentral.</string>


    <!-- LoginScreen -->
    <string name="welcome_back">Welcome To Echo</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">Email </string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="forget_password">Forget password?</string>


    <!-- Registration Screen -->
    <string name="signup_header">Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="signup_button">SIGN UP</string>
    <string name="back_button">BACK</string>


    <!-- HomeScreen -->
    <!-- Header Profile -->
    <string name="header_home">Home</string>

    <!-- Tab Layout Items -->
    <string name="tab_newest_surveys">Newest Surveys</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_top_votes">Top Votes</string>
    <string name="Your_voice_already_counts">Your voice already counts</string>


    <!-- ProfileScreen -->
    <!-- Profile Header -->
    <string name="profile_header">Profilname</string>

    <!-- Created Surveys Label -->
    <string name="label_created_surveys">Created Surveys</string>
    <!-- Saved Surveys Label -->
    <string name="label_saved_surveys">Saved Surveys</string>

    <!-- Profile Tab Layout Items -->
    <string name="tab_my_posts">My Post</string>
    <string name="tab_my_saved">My Saved</string>


    <!-- SearchScreen -->
    <!-- Profile Screen -->
    <string name="header_search">Search</string>
    <string name="hint_search_surveys">search for surveys</string>


    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profil</string>
    <string name="navigation_settings">Einstellungen</string>


    <!-- Allgemeine Fehlermeldungen -->
    <string name="survey_removed">removed from - My Saved Surveys</string>
    <string name="survey_saved">saved to - My Saved Surveys</string>
    <string name="error_loading_data">Daten konnten nicht geladen werden</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="survey_categories">
        <item>Sonstiges</item>
        <item>Bildung</item>
        <item>Technologie</item>
        <item>Politik</item>
        <item>Umwelt</item>
        <item>Wirtschaft</item>
        <item>Sport</item>
        <item>Reisen</item>
        <item>Gesundheit und Wellness</item>
        <item>Kunst und Kultur</item>
        <item>Soziale Gerechtigkeit</item>
    </string-array>
</resources>
