<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome2">


    <TextView
        android:id="@+id/tv_reg_header"
        style="@style/LoginTextColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/signup_header"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_e_username_reg"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="180dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputusername_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_e_mail_reg"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/KIColor"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_e_username_reg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:maxLines="1"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password_reg"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/disagree"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:endIconTint="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_e_mail_reg"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"

            android:maxLines="1"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password_repeat_reg"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxStrokeColor="@color/disagree"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:endIconTint="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password_reg"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputpasswordrepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:textColor="@color/white"

            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_SignUp"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_back_to_login"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:backgroundTint="@color/btn_background2"
        android:text="@string/back_button"
        app:layout_constraintBottom_toTopOf="@+id/btn_SignUp"
        app:layout_constraintEnd_toEndOf="@+id/btn_SignUp"
        app:layout_constraintStart_toStartOf="@+id/btn_SignUp" />

    <ImageView
        android:id="@+id/iv_logoecho"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_e_username_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_header"
        app:srcCompat="@drawable/echologo" />


</androidx.constraintlayout.widget.ConstraintLayout>