<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundhome2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profil_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_header"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_prfoilPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/defaultprofilpic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil_toolbar" />


    <TextView
        android:id="@+id/tv_createdSurveys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_created_surveys"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_prfoilPic"
        app:layout_constraintTop_toBottomOf="@+id/profil_toolbar" />

    <TextView
        android:id="@+id/tv_countSurveysCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16dp"
        android:text="8"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_createdSurveys"
        app:layout_constraintStart_toEndOf="@+id/tv_createdSurveys"
        app:layout_constraintTop_toTopOf="@+id/tv_createdSurveys" />

    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="@string/label_saved_surveys"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_createdSurveys"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdSurveys" />

    <TextView
        android:id="@+id/tv_countSavedSurveys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="125"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_follower"
        app:layout_constraintStart_toStartOf="@+id/tv_countSurveysCreated"
        app:layout_constraintTop_toTopOf="@+id/tv_follower" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_tabbar_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.8"
        android:backgroundTint="@color/colorPrimaryRv"
        app:layout_constraintTop_toBottomOf="@+id/iv_prfoilPic"
        app:tabMode="fixed"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_my_posts" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_my_saved" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_tabbar_profil"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_item_survey" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_Floating_new_Vote_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/btn_background2"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_profil"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
